--- a/src/scss/components/_item-details.scss
+++ b/src/scss/components/_item-details.scss
@@ -6,7 +6,13 @@
 	background: $item-details-bg;
 
 	@include bp-down(sm) {
-		display: none; // dev only
+		@include same(top, right, bottom, left, 0);
+		position: absolute;
+		transform: translate3d(100%, 0, 0);
+
+		&.active {
+			transform: translate3d(0, 0, 0);
+		}
 	}
 
 	@include bp-only(md) {
